dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(gpv, 0.3)
AM_CONFIG_HEADER(config.h)

dnl Pick up the Gnome macros.
dnl AM_ACLOCAL_INCLUDE(macros)

GNOME_INIT
AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CXX
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_LIBTOOL

dnl Define template for autoheader
AH_TEMPLATE([HAVE_LIBSM], [Enable libsm])
AH_TEMPLATE([USE_GTKPLOT], [Enable libsm])
AH_TEMPLATE([HAVE_ORBIT], [Enable orbit])

AC_CHECK_HEADERS(values.h)

GNOME_COMPILE_WARNINGS
GNOME_X_CHECKS
dnl AM_PATH_LIBGUPPI

AC_ARG_ENABLE(gtkplot, [  --enable-gtkplot          Enable support for GtkPlot],
[case "${enableval}" in
  yes) gtkplot=yes ;;
  no)  gtkplot=no ;;
  *)   AC_MSG_ERROR([bad value ${enableval} for enable-gtkplot option]) ;;
esac])

AM_CONDITIONAL(ORBIT, test x$orbit = xyes)
if test x"$gtkplot" = x"yes" ; then
  AC_DEFINE(HAVE_ORBIT)
fi
AM_CONDITIONAL(GTKPLOT, test x$gtkplot = xyes)
if test x"$gtkplot" = x"yes" ; then
  AC_DEFINE(USE_GTKPLOT)
  AM_PATH_GTK_EXTRA
fi

AC_OUTPUT([
Makefile
src/Makefile
doc/Makefile
doc/C/Makefile
])

